fix div overlapping a button making portions of the button unclickable

--- a/app/assets/stylesheets/restaurant_show.scss
+++ b/app/assets/stylesheets/restaurant_show.scss
@@ -200,6 +200,10 @@
     background-color: transparent;
 }
 
+.datepicker-res-tile {
+    height: inherit;
+}
+
 .red-button-container {
     display: flex;
     justify-content: center;
